# trade-war-model

./: .gitignore  DEVELOPMENT_PLAN.md  LICENSE  README.md  TestPrimitive.hs  setup.sh  trade-war-model.cabal
app/: Main.hs  TestParser.hs
src/TradeWar/: Equilibrium.hs  Model.hs  RealWorldData.hs  Simulation.hs  Strategy.hs  StrategyCombinators.hs  StrategyDSL.hs  StrategyParser.hs  Types.hs  Visualization.hs
src/TradeWar/DSL/: AST.hs
test/: Spec.hs  StrategyCombinatorSpec.hs  StrategyDSLSpec.hs  StrategyParserSpec.hs
